Divide database code into AbstractDatabase, AbstractBatchQuery, AbstractTableBuilder, AbstractTableQuery to reduce duplicate code between SQL and MySQL implementations, Moved all usages to new API and optimized them